--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,10 @@
   ],
   "require": {
     "php": "^7.1|^8.0",
-    "illuminate/console": "^5.6",
-    "illuminate/filesystem": "^5.6",
-    "illuminate/support": "^5.6",
-    "illuminate/database": "^5.6"
+    "illuminate/console": ">=5.6",
+    "illuminate/filesystem": ">=5.6",
+    "illuminate/support": ">=5.6",
+    "illuminate/database": ">=5.6"
 
   },
   "autoload": {
@@ -30,7 +30,7 @@
   "extra": {
     "laravel": {
       "providers": [
-        "Laravel\\Ui\\UiServiceProvider"
+
       ]
     }
   },
